tests/int/snapshots/r#mod__int__use_command__module_main_flags_r_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::*
crate::cli::CrawkArgs
crawk::version
crawk::{AnalysisOptions, Analyzer, TypeReference, version}

----- stderr -----
