tests/int/snapshots/r#mod__int__use_command__module_main_flags_r_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-r"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::main::cli::*
crate::main::cli::CrawkArgs
crawk::AnalysisOptions
crawk::Analyzer
crawk::TypeReference
crawk::version

----- stderr -----
