tests/int/snapshots/r#mod__int__use_command__module_main_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crawk::version
crawk::{AnalysisOptions, Analyzer, version}
super::cli::CrawkArgs

----- stderr -----
