tests/int/snapshots/r#mod__int__use_command__module_module.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - module
---
success: true
exit_code: 0
----- stdout -----
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::{DEFAULT_SRC_DIR, MODULE_FILE_NAME, PATH_QUALIFIER_CRATE}
crate::constants::{MODULE_NAME_TEST, MODULE_NAME_TESTS, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
super::path::{GroupItem, PathPrefix, PathSuffix, TypeReference}

----- stderr -----
