tests/int/snapshots/r#mod__int__use_command__module_module::analyzer_flags_r_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::analyzer"
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::{ATTR_CFG, MODULE_NAME_TEST, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::module::analyzer::*
crate::module::path::{GroupItem, PathPrefix, PathSuffix, TypeReference}

----- stderr -----
